--- a/src/scss/core/_forms.scss
+++ b/src/scss/core/_forms.scss
@@ -1,6 +1,6 @@
 .input-group-min {
   @include tablet {
-    margin-top: -10px;
+    margin-top: -13px;
   }
   .form-label {
     margin-bottom: 0;
@@ -16,7 +16,7 @@
     }
 
   }
-  input {
+  input, select {
     margin-top: -9.1px;
   }
   &.readonly, &.disabled {
