--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -29,8 +29,8 @@
         </a>
         <ul class="dropdown-menu text-small shadow profile-ul" aria-labelledby="dropdownUser3">
           <li><button class="dropdown-item text-muted" disabled>@{{ appState.user.username }}</button></li>
-          <li><a class="dropdown-item" href="#">Configuraciones</a></li>
-          <li><a class="dropdown-item" href="#">Perfil</a></li>
+          <li><a class="dropdown-item" routerLink="/enterprise/config">Configuraciones</a></li>
+          <li><a routerLink="/building" [queryParams]="{module: 'Perfil'}" class="dropdown-item">Perfil</a></li>
           <li>
             <hr class="dropdown-divider">
           </li>
