--- a/src/app/modules/docs/buys/views/buys.component.html
+++ b/src/app/modules/docs/buys/views/buys.component.html
@@ -2,41 +2,57 @@
     <div class="card-body">
         <div class="row">
             <div class="col-12 col-md-6">
-                <label for="" class="form-label">Datos de Proveedor</label>
-                <!-- <app-select-person></app-select-person> -->
+                <label class="label-title mb-2">Datos de Proveedor</label>
+                <app-select-person [loadFinalCostumer]="false" [provider]="true"></app-select-person>
             </div>
             <div class="col-12 col-md-6">
-                <div class="row g-2">
+              <label class="label-title mb-2">Datos de la Factura</label>
+                <div class="row gx-1 gy-2">
                     <div class="col-12 col-md-4">
-                        <label for="" class="form-label">Fecha de Emision</label>
-                        <input type="date" class="form-control" placeholder="Fecha" [(ngModel)]="formData.date">
+                      <div class="input-group-min">
+                        <label for="dateEmit" class="form-label">Fecha de Emision</label>
+                        <input [(ngModel)]="formData.date_emit"
+                               name="dateEmit" id="dateEmit"
+                               type="date" class="form-control" placeholder="Fecha">
+                      </div>
                     </div>
                     <div class="col-12 col-md-4">
-                        <label for="" class="form-label">Fecha de Vencimiento</label>
-                        <input type="text" class="form-control" placeholder="N. Factura" readonly>
+                      <div class="input-group-min">
+                        <label for="date_end" class="form-label">Fecha de Vencimiento</label>
+                        <input [(ngModel)]="formData.date_end"
+                               name="date_end" id="date_end"
+                               type="date" class="form-control">
+                      </div>
                     </div>
 
                     <div class="col-12 col-md-4">
-                        <label for="" class="form-label">Forma de Pago</label>
-                        <select class="form-select">
-                            <option value="FACTURA" selected>Factura</option>
+                      <div class="input-group-min">
+                        <label for="method_pay" class="form-label">Forma de Pago</label>
+                        <select class="form-select" id="method_pay" disabled>
+                          <option value="1" selected>Efectivo</option>
+                          <option value="2">Crédito</option>
                         </select>
+                      </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                      <div class="input-group-min">
+                        <label for="number" class="form-label"># Factura</label>
+                        <input [(ngModel)]="formData.number"
+                               type="text" name="number" id="number" class="form-control">
+                      </div>
                     </div>
 
-                    <div class="col-12 col-md-4">
-                        <label for="" class="form-label"># Factura</label>
-                        <input type="text" class="form-control">
-                    </div>
-
-                    <div class="col-12 col-md-4">
-                        <label for="" class="form-label">Autorización</label>
-                        <input type="text" class="form-control">
+                    <div class="col-12 col-md-8">
+                      <div class="input-group-min">
+                        <label for="key_access" class="form-label">Autorización</label>
+                        <input [(ngModel)]="formData.key_access"
+                               type="text" name="key_access" id="key_access" class="form-control">
+                      </div>
                     </div>
                 </div>
-
             </div>
         </div>
-
+        <div class="label-title">Detalles</div>
         <div class="col-12 mt-2">
             <div class="table-responsive">
                 <table class="table table-striped table-hover table-bordered">
@@ -55,24 +71,24 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>001</td>
-                            <td>Producto</td>
-                            <td>20.00</td>
-                            <td>1</td>
-                            <td>0</td>
-                            <td>0</td>
-                            <td>0</td>
-                            <td>20.00</td>
-                            <td class="text-end">
-                                <button class="s-btn text-danger btn-sm" type="button" data-bs-toggle="modal"><i
-                                            class="fa fa-trash"></i></button>
-                                <button class="s-btn text-primary btn-sm" type="button" data-bs-toggle="modal"><i
-                                            class="fa fa-exchange-alt"></i></button>
-                            </td>
+                      <ng-container *ngIf="remoteXML">
+                        <tr *ngFor="let det of details">
+                          <td class="text-danger fw-bold">0</td>
+                          <td>{{ det.codigoPrincipal }}</td>
+                          <td>{{ det.descripcion }}</td>
+                          <td>{{ det.precioUnitario }}</td>
+                          <td>{{ det.cantidad }}</td>
+                          <td>{{ det.descuento }}</td>
+                          <td>0</td>
+                          <td>0</td>
+                          <td>{{ det.precioTotalSinImpuesto }}</td>
+                          <td>
+                            <button class="btn btn-sm text-danger"><i class="fa fa-trash"></i></button>
+                            <button class="btn btn-sm text-primary"><i class="fa fa-exchange-alt"></i></button>
+                          </td>
                         </tr>
-                        <tr>
+                      </ng-container>
+                        <tr *ngIf="details.length <=0">
                             <td colspan="10" class="text-center text-muted">Agregue productos a la Factura</td>
                         </tr>
                     </tbody>
@@ -82,30 +98,35 @@
         <div class="row">
             <div class="col-12 col-md-12">
                 <!-- <button type="button" class="btn btn-primary text-white me-2" data-bs-dismiss="modal">Agregar producto</button> -->
-                <div class="row g-2">
+                <div class="row g-4">
                     <div class="col-12 col-md-6">
                         <div class="row g-2">
                             <div class="col-12 col-md-4">
-                                <button type="button" class="btn btn-primary text-white me-2" data-bs-dismiss="modal">Agregar producto</button>
+                                <button type="button" class="btn btn-light w-100" data-bs-dismiss="modal"><i class="fa fa-plus me-3 text-success"></i>Agregar articulo</button>
                             </div>
                             <div class="col-12 col-md-4">
-                                <button type="button" class="btn btn-primary text-white me-2" data-bs-dismiss="modal">Cargar XML</button>
+                                <button type="button" class="btn btn-light w-100"><i class="fa fa-cloud-download-alt text-info me-3"></i>Cargar XML</button>
                             </div>
                             <div class="col-12 col-md-4">
-                                <button type="button" class="btn btn-primary text-white me-2" data-bs-dismiss="modal">Cargar Clave de Acceso</button>
+                                <button type="button" class="btn btn-light w-100" data-bs-dismiss="modal"><i class="fa fa-key me-3 text-purple"></i>Cargar Clave de Acceso</button>
                             </div>
-                            <button type="button" class="btn btn-primary text-white me-2" data-bs-dismiss="modal">Procesar
+                            <button type="button" class="btn btn-primary col-12" data-bs-dismiss="modal"><i class="fa fa-save me-3"></i>Procesar
                                 Documento</button>
                         </div>
                     </div>
-                    <div class="col-12 col-md-3 align-items-center">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" checked="true" id="">Actualizar precios al finalizar
+                    <div class="col-12 col-md-3">
+                      <div class="row g-3">
+                        <button type="button" class="btn btn-light col-12" data-bs-dismiss="modal"><i class="fa fa-eraser me-3 text-warning"></i>Limpiar todo</button>
+                        <div class="form-check col-12 text-center">
+                          <label>
+                            <input class="form-check-input" type="checkbox" checked>
+                            Actualizar precios automat.
+                          </label>
                         </div>
-                        <button type="button" class="btn btn-primary text-white me-2" data-bs-dismiss="modal">Limpiar todo</button>
+                      </div>
                     </div>
                     <div class="col-12 col-md-3 text-end align-items-end">
-                        <table class="table table-borderless">
+                        <table class="table table-sm table-borderless">
                             <tbody>
                                 <tr>
                                     <td>Subtotal 0% </td>
