--- a/src/app/modules/inventory/articles/components/frm-product/frm-product.component.html
+++ b/src/app/modules/inventory/articles/components/frm-product/frm-product.component.html
@@ -35,7 +35,7 @@
     </div>
     <div class="col-12 col-md-6">
         <label for="product__iva" class="form-label">IVA: *</label>
-        <select [(ngModel)]="iva" name="product__iva" id="product__iva" class="form-select" (change)="onChangeIVA($event.target.value)">
+        <select [(ngModel)]="ivaSelect" name="product__iva" id="product__iva" class="form-select">
           <option *ngFor="let i of ivaList"  [value]="i" selected>{{ i }}%</option>
         </select>
     </div>
@@ -43,26 +43,11 @@
     <label class="label-title"><span>Precios</span></label>
     <div class="col-12">
         <div class="row g-2">
-            <div class="div col-3 col-md-3">
-                <label for="product_price" class="form-label">P. Costo</label>
-                <input type="number" min="0" id="product_price" [(ngModel)]="formData.price_purchase" name="product_price" class="form-control" (input)="onInputPrice($event.target.value)" (change)="onInputPrice($event.target.value)" step="any">
-            </div>
-            <div class="div col-3 col-md-3">
-                <label for="product_pricePlusIva" class="form-label">P. Costo + IVA</label>
-                <input type="number" id="product_pricePlusIva" name="product_pricePlusIva" class="form-control" disabled [value]="validate.round(pvp)">
-            </div>
-
-            <div class="div col-3 col-md-3">
-                <label for="product_utility" class="form-label">% Utilidad</label>
-                <input type="number" min="0" id="product_utility" [value]="utility" name="product_utility" class="form-control" (input)="onInputUtility($event.target.value)" (change)="onInputUtility($event.target.value)" step="any">
-            </div>
-
-            <div class="div col-3 col-md-3">
-                <label for="pvpIva" class="form-label">PVP + Iva</label>
-                <input type="number" min="0" id="pvpIva" name="pvpIva"
-                       class="form-control" [value]="validate.round(pvpIva)"
-                       step="any">
-            </div>
+          <partial-frm-prices (onChange)="onChangePrices($event)"
+                              [edit]="edit"
+                              [price]="formData.price_purchase"
+                              [pvp1]="formData.pvp"
+                              [hasIva]="ivaSelect > 0"></partial-frm-prices>
         </div>
     </div>
 
