--- a/src/app/modules/inventory/index/views/inventory-adjust/inventory-adjust.component.html
+++ b/src/app/modules/inventory/index/views/inventory-adjust/inventory-adjust.component.html
@@ -11,7 +11,7 @@
       <div class="col-12">
         <div class="table-responsive">
           <table class="table table-bordered table-hover">
-            <thead class="table-light">
+            <thead>
               <tr>
                 <th>Cod</th>
                 <th>Detalle</th>
