--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -40,7 +40,7 @@
         <ul class="sub-item grid">
           <li><a routerLink="/doc/cfdi" [queryParams]="{doc: 1}"><i class="bi bi-receipt"></i><span>Facturas</span></a></li>
           <li><a [routerLink]="'/building'" [queryParams]="{'module': 'G. Remision'}"><i class="bi bi-receipt"></i><span>Guias de Remision</span></a></li>
-          <li><a [routerLink]="'/building'" [queryParams]="{'module': 'N. Debito'}"><i class="bi bi-receipt"></i><span>Notas de Credito</span></a></li>
+          <li><a [routerLink]="'/doc/note-credit'"><i class="bi bi-receipt"></i><span>Notas de Crédito</span></a></li>
           <li><a [routerLink]="'/building'" [queryParams]="{'module': 'N. Credito'}"><i class="bi bi-receipt"></i><span>Notas de Debito</span></a></li>
         </ul>
       </li>
