--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -44,6 +44,13 @@
           <li><a [routerLink]="'/building'" [queryParams]="{'module': 'N. Credito'}"><i class="bi bi-receipt"></i><span>Notas de Debito</span></a></li>
         </ul>
       </li>
+      <li class="divider"></li>
+      <li class="item-menu sm-hide">
+        <a routerLink="/medical/optometry" title="Optometría" data-name="Optometría" data-bs-toggle="tooltip" data-bs-placement="right">
+          <i class="bi bi-eye"></i>
+        </a>
+      </li>
+
     </ul>
     <ul class="aside-menu second">
       <li class="item-menu">
