MEDICAL - SIN PAGINAR

--- a/src/app/modules/medical/optometry/views/clinical-files/clinical-files.component.html
+++ b/src/app/modules/medical/optometry/views/clinical-files/clinical-files.component.html
@@ -4,6 +4,10 @@
     <app-dialog-integral modalId="addClinicalFile" [edit]="false"></app-dialog-integral>
   </div>
   <div class="card pt-0">
+  <div class="row" style="display: none">
+    <div class="d-flex mb-2" >
+    </div>
+  </div>
     <div class="table-responsive">
       <table class="table table-bordered table-hover mb-0">
         <thead>
