--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -22,3 +22,6 @@
 @import "core/section";
 @import "core/forms";
 @import "core/modal";
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
